tools/trace2syz/y.output

state 0
	$accept: .syscall $end 

	IDENTIFIER  shift 2
	INT  shift 4
	RESUMED  shift 3
	.  error

	syscall  goto 1

state 1
	$accept:  syscall.$end 

	$end  accept
	.  error


state 2
	syscall:  IDENTIFIER.LPAREN UNFINISHED 
	syscall:  IDENTIFIER.LPAREN types UNFINISHED 
	syscall:  IDENTIFIER.LPAREN RESUMED RPAREN EQUALS INT 
	syscall:  IDENTIFIER.LPAREN RPAREN EQUALS INT 
	syscall:  IDENTIFIER.LPAREN RPAREN EQUALS UINT 
	syscall:  IDENTIFIER.LPAREN types RPAREN EQUALS INT 
	syscall:  IDENTIFIER.LPAREN types RPAREN EQUALS UINT 
	syscall:  IDENTIFIER.LPAREN types RPAREN EQUALS QUESTION 
	syscall:  IDENTIFIER.LPAREN types RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER.LPAREN types RPAREN EQUALS UINT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER.LPAREN types RPAREN EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER.LPAREN types RPAREN EQUALS UINT LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER.LPAREN RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER.LPAREN RPAREN EQUALS UINT FLAG LPAREN parentheticals RPAREN 

	LPAREN  shift 5
	.  error


state 3
	syscall:  RESUMED.UNFINISHED RPAREN EQUALS QUESTION 
	syscall:  RESUMED.RPAREN EQUALS INT 
	syscall:  RESUMED.RPAREN EQUALS UINT 
	syscall:  RESUMED.RPAREN EQUALS QUESTION 
	syscall:  RESUMED.RPAREN EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  RESUMED.RPAREN EQUALS UINT LPAREN parentheticals RPAREN 
	syscall:  RESUMED.RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 
	syscall:  RESUMED.types RPAREN EQUALS INT 
	syscall:  RESUMED.types RPAREN EQUALS UINT 
	syscall:  RESUMED.types RPAREN EQUALS QUESTION 
	syscall:  RESUMED.types RPAREN EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  RESUMED.types RPAREN EQUALS UINT LPAREN parentheticals RPAREN 
	syscall:  RESUMED.types RPAREN EQUALS UINT FLAG LPAREN parentheticals RPAREN 
	syscall:  RESUMED.types RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 

	STRING_LITERAL  shift 19
	IPV4  shift 26
	IPV6  shift 27
	IDENTIFIER  shift 21
	FLAG  shift 35
	DATETIME  shift 20
	MAC  shift 28
	INT  shift 37
	UINT  shift 38
	AND  shift 22
	ONESCOMP  shift 18
	LBRACKET  shift 25
	LBRACKET_SQUARE  shift 24
	LPAREN  shift 32
	RPAREN  shift 7
	UNFINISHED  shift 6
	NULL  shift 23
	KEYWORD  shift 36
	.  error

	field_type  goto 11
	int_type  goto 34
	buf_type  goto 10
	struct_type  goto 14
	array_type  goto 13
	flag_type  goto 33
	call_type  goto 15
	macro_type  goto 31
	type  goto 9
	expr_type  goto 17
	flags  goto 29
	ints  goto 30
	pointer_type  goto 12
	ip_type  goto 16
	types  goto 8

state 4
	syscall:  INT.syscall 

	IDENTIFIER  shift 2
	INT  shift 4
	RESUMED  shift 3
	.  error

	syscall  goto 39

state 5
	syscall:  IDENTIFIER LPAREN.UNFINISHED 
	syscall:  IDENTIFIER LPAREN.types UNFINISHED 
	syscall:  IDENTIFIER LPAREN.RESUMED RPAREN EQUALS INT 
	syscall:  IDENTIFIER LPAREN.RPAREN EQUALS INT 
	syscall:  IDENTIFIER LPAREN.RPAREN EQUALS UINT 
	syscall:  IDENTIFIER LPAREN.types RPAREN EQUALS INT 
	syscall:  IDENTIFIER LPAREN.types RPAREN EQUALS UINT 
	syscall:  IDENTIFIER LPAREN.types RPAREN EQUALS QUESTION 
	syscall:  IDENTIFIER LPAREN.types RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN.types RPAREN EQUALS UINT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN.types RPAREN EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN.types RPAREN EQUALS UINT LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN.RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN.RPAREN EQUALS UINT FLAG LPAREN parentheticals RPAREN 

	STRING_LITERAL  shift 19
	IPV4  shift 26
	IPV6  shift 27
	IDENTIFIER  shift 21
	FLAG  shift 35
	DATETIME  shift 20
	MAC  shift 28
	INT  shift 37
	UINT  shift 38
	AND  shift 22
	ONESCOMP  shift 18
	LBRACKET  shift 25
	LBRACKET_SQUARE  shift 24
	LPAREN  shift 32
	RPAREN  shift 43
	UNFINISHED  shift 40
	RESUMED  shift 42
	NULL  shift 23
	KEYWORD  shift 36
	.  error

	field_type  goto 11
	int_type  goto 34
	buf_type  goto 10
	struct_type  goto 14
	array_type  goto 13
	flag_type  goto 33
	call_type  goto 15
	macro_type  goto 31
	type  goto 9
	expr_type  goto 17
	flags  goto 29
	ints  goto 30
	pointer_type  goto 12
	ip_type  goto 16
	types  goto 41

state 6
	syscall:  RESUMED UNFINISHED.RPAREN EQUALS QUESTION 

	RPAREN  shift 44
	.  error


state 7
	syscall:  RESUMED RPAREN.EQUALS INT 
	syscall:  RESUMED RPAREN.EQUALS UINT 
	syscall:  RESUMED RPAREN.EQUALS QUESTION 
	syscall:  RESUMED RPAREN.EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  RESUMED RPAREN.EQUALS UINT LPAREN parentheticals RPAREN 
	syscall:  RESUMED RPAREN.EQUALS INT FLAG LPAREN parentheticals RPAREN 

	EQUALS  shift 45
	.  error


state 8
	syscall:  RESUMED types.RPAREN EQUALS INT 
	syscall:  RESUMED types.RPAREN EQUALS UINT 
	syscall:  RESUMED types.RPAREN EQUALS QUESTION 
	syscall:  RESUMED types.RPAREN EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  RESUMED types.RPAREN EQUALS UINT LPAREN parentheticals RPAREN 
	syscall:  RESUMED types.RPAREN EQUALS UINT FLAG LPAREN parentheticals RPAREN 
	syscall:  RESUMED types.RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 
	types:  types.COMMA type 

	COMMA  shift 47
	RPAREN  shift 46
	.  error


state 9
	types:  type.    (42)

	.  reduce 42 (src line 168)


state 10
	type:  buf_type.    (44)

	.  reduce 44 (src line 173)


state 11
	type:  field_type.    (45)

	.  reduce 45 (src line 175)


state 12
	type:  pointer_type.    (46)

	.  reduce 46 (src line 176)


state 13
	type:  array_type.    (47)

	.  reduce 47 (src line 177)


state 14
	type:  struct_type.    (48)

	.  reduce 48 (src line 178)


state 15
	type:  call_type.    (49)

	.  reduce 49 (src line 179)


state 16
	type:  ip_type.    (50)

	.  reduce 50 (src line 180)


state 17
	type:  expr_type.    (51)
	type:  expr_type.ARROW type 
	expr_type:  expr_type.OR expr_type 
	expr_type:  expr_type.AND expr_type 
	expr_type:  expr_type.LSHIFT expr_type 
	expr_type:  expr_type.RSHIFT expr_type 
	expr_type:  expr_type.LOR expr_type 
	expr_type:  expr_type.LAND expr_type 
	expr_type:  expr_type.LEQUAL expr_type 
	expr_type:  expr_type.TIMES expr_type 

	ARROW  shift 48
	OR  shift 49
	AND  shift 50
	LOR  shift 53
	TIMES  shift 56
	LAND  shift 54
	LEQUAL  shift 55
	LSHIFT  shift 51
	RSHIFT  shift 52
	.  reduce 51 (src line 181)


state 18
	type:  ONESCOMP.array_type 
	expr_type:  ONESCOMP.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LBRACKET_SQUARE  shift 24
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	array_type  goto 57
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 58
	flags  goto 29
	ints  goto 30

state 19
	buf_type:  STRING_LITERAL.    (88)

	.  reduce 88 (src line 238)


state 20
	buf_type:  DATETIME.    (89)

	.  reduce 89 (src line 240)


state 21
	call_type:  IDENTIFIER.LPAREN types RPAREN 
	field_type:  IDENTIFIER.EQUALS 
	field_type:  IDENTIFIER.EQUALS type 
	field_type:  IDENTIFIER.COLON type 
	field_type:  IDENTIFIER.EQUALS AT type 
	field_type:  IDENTIFIER.LBRACKET_SQUARE FLAG RBRACKET_SQUARE EQUALS type 

	LBRACKET_SQUARE  shift 63
	LPAREN  shift 60
	EQUALS  shift 61
	COLON  shift 62
	.  error


state 22
	pointer_type:  AND.IDENTIFIER 
	pointer_type:  AND.UINT EQUALS type 

	IDENTIFIER  shift 64
	UINT  shift 65
	.  error


state 23
	pointer_type:  NULL.    (77)

	.  reduce 77 (src line 220)


state 24
	array_type:  LBRACKET_SQUARE.types RBRACKET_SQUARE 
	array_type:  LBRACKET_SQUARE.RBRACKET_SQUARE 

	STRING_LITERAL  shift 19
	IPV4  shift 26
	IPV6  shift 27
	IDENTIFIER  shift 21
	FLAG  shift 35
	DATETIME  shift 20
	MAC  shift 28
	INT  shift 37
	UINT  shift 38
	AND  shift 22
	ONESCOMP  shift 18
	LBRACKET  shift 25
	LBRACKET_SQUARE  shift 24
	RBRACKET_SQUARE  shift 67
	LPAREN  shift 32
	NULL  shift 23
	KEYWORD  shift 36
	.  error

	field_type  goto 11
	int_type  goto 34
	buf_type  goto 10
	struct_type  goto 14
	array_type  goto 13
	flag_type  goto 33
	call_type  goto 15
	macro_type  goto 31
	type  goto 9
	expr_type  goto 17
	flags  goto 29
	ints  goto 30
	pointer_type  goto 12
	ip_type  goto 16
	types  goto 66

state 25
	struct_type:  LBRACKET.types RBRACKET 
	struct_type:  LBRACKET.types COMMA RBRACKET 
	struct_type:  LBRACKET.RBRACKET 

	STRING_LITERAL  shift 19
	IPV4  shift 26
	IPV6  shift 27
	IDENTIFIER  shift 21
	FLAG  shift 35
	DATETIME  shift 20
	MAC  shift 28
	INT  shift 37
	UINT  shift 38
	AND  shift 22
	ONESCOMP  shift 18
	LBRACKET  shift 25
	RBRACKET  shift 69
	LBRACKET_SQUARE  shift 24
	LPAREN  shift 32
	NULL  shift 23
	KEYWORD  shift 36
	.  error

	field_type  goto 11
	int_type  goto 34
	buf_type  goto 10
	struct_type  goto 14
	array_type  goto 13
	flag_type  goto 33
	call_type  goto 15
	macro_type  goto 31
	type  goto 9
	expr_type  goto 17
	flags  goto 29
	ints  goto 30
	pointer_type  goto 12
	ip_type  goto 16
	types  goto 68

state 26
	ip_type:  IPV4.    (93)

	.  reduce 93 (src line 250)


state 27
	ip_type:  IPV6.    (94)

	.  reduce 94 (src line 252)


state 28
	ip_type:  MAC.    (95)

	.  reduce 95 (src line 253)


state 29
	expr_type:  flags.    (54)
	flags:  flags.flag_type 

	FLAG  shift 71
	.  reduce 54 (src line 186)

	flag_type  goto 70

state 30
	expr_type:  ints.    (55)
	ints:  ints.int_type 

	INT  shift 37
	UINT  shift 38
	.  reduce 55 (src line 188)

	int_type  goto 72

state 31
	expr_type:  macro_type.    (56)

	.  reduce 56 (src line 189)


state 32
	expr_type:  LPAREN.expr_type RPAREN 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 73
	flags  goto 29
	ints  goto 30

state 33
	flags:  flag_type.    (69)

	.  reduce 69 (src line 205)


state 34
	ints:  int_type.    (67)

	.  reduce 67 (src line 201)


state 35
	macro_type:  FLAG.LPAREN types RPAREN 
	macro_type:  FLAG.LPAREN identifiers RPAREN 
	flag_type:  FLAG.    (92)

	LPAREN  shift 74
	.  reduce 92 (src line 247)


state 36
	macro_type:  KEYWORD.LPAREN KEYWORD IDENTIFIER RPAREN 

	LPAREN  shift 75
	.  error


state 37
	int_type:  INT.    (90)

	.  reduce 90 (src line 243)


state 38
	int_type:  UINT.    (91)

	.  reduce 91 (src line 245)


state 39
	syscall:  INT syscall.    (29)

	.  reduce 29 (src line 149)


state 40
	syscall:  IDENTIFIER LPAREN UNFINISHED.    (1)

	.  reduce 1 (src line 77)


state 41
	syscall:  IDENTIFIER LPAREN types.UNFINISHED 
	syscall:  IDENTIFIER LPAREN types.RPAREN EQUALS INT 
	syscall:  IDENTIFIER LPAREN types.RPAREN EQUALS UINT 
	syscall:  IDENTIFIER LPAREN types.RPAREN EQUALS QUESTION 
	syscall:  IDENTIFIER LPAREN types.RPAREN EQUALS INT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN types.RPAREN EQUALS UINT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN types.RPAREN EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN types.RPAREN EQUALS UINT LPAREN parentheticals RPAREN 
	types:  types.COMMA type 

	COMMA  shift 47
	RPAREN  shift 77
	UNFINISHED  shift 76
	.  error


state 42
	syscall:  IDENTIFIER LPAREN RESUMED.RPAREN EQUALS INT 

	RPAREN  shift 78
	.  error


state 43
	syscall:  IDENTIFIER LPAREN RPAREN.EQUALS INT 
	syscall:  IDENTIFIER LPAREN RPAREN.EQUALS UINT 
	syscall:  IDENTIFIER LPAREN RPAREN.EQUALS INT FLAG LPAREN parentheticals RPAREN 
	syscall:  IDENTIFIER LPAREN RPAREN.EQUALS UINT FLAG LPAREN parentheticals RPAREN 

	EQUALS  shift 79
	.  error


state 44
	syscall:  RESUMED UNFINISHED RPAREN.EQUALS QUESTION 

	EQUALS  shift 80
	.  error


state 45
	syscall:  RESUMED RPAREN EQUALS.INT 
	syscall:  RESUMED RPAREN EQUALS.UINT 
	syscall:  RESUMED RPAREN EQUALS.QUESTION 
	syscall:  RESUMED RPAREN EQUALS.INT LPAREN parentheticals RPAREN 
	syscall:  RESUMED RPAREN EQUALS.UINT LPAREN parentheticals RPAREN 
	syscall:  RESUMED RPAREN EQUALS.INT FLAG LPAREN parentheticals RPAREN 

	INT  shift 81
	UINT  shift 82
	QUESTION  shift 83
	.  error


state 46
	syscall:  RESUMED types RPAREN.EQUALS INT 
	syscall:  RESUMED types RPAREN.EQUALS UINT 
	syscall:  RESUMED types RPAREN.EQUALS QUESTION 
	syscall:  RESUMED types RPAREN.EQUALS INT LPAREN parentheticals RPAREN 
	syscall:  RESUMED types RPAREN.EQUALS UINT LPAREN parentheticals RPAREN 
	syscall:  RESUMED types RPAREN.EQUALS UINT FLAG LPAREN parentheticals RPAREN 
	syscall:  RESUMED types RPAREN.EQUALS INT FLAG LPAREN parentheticals RPAREN 

	EQUALS  shift 84
	.  error


state 47
	types:  types COMMA.type 

	STRING_LITERAL  shift 19
	IPV4  shift 26
	IPV6  shift 27
	IDENTIFIER  shift 21
	FLAG  shift 35
	DATETIME  shift 20
	MAC  shift 28
	INT  shift 37
	UINT  shift 38
	AND  shift 22
	ONESCOMP  shift 18
	LBRACKET  shift 25
	LBRACKET_SQUARE  shift 24
	LPAREN  shift 32
	NULL  shift 23
	KEYWORD  shift 36
	.  error

	field_type  goto 11
	int_type  goto 34
	buf_type  goto 10
	struct_type  goto 14
	array_type  goto 13
	flag_type  goto 33
	call_type  goto 15
	macro_type  goto 31
	type  goto 85
	expr_type  goto 17
	flags  goto 29
	ints  goto 30
	pointer_type  goto 12
	ip_type  goto 16

state 48
	type:  expr_type ARROW.type 

	STRING_LITERAL  shift 19
	IPV4  shift 26
	IPV6  shift 27
	IDENTIFIER  shift 21
	FLAG  shift 35
	DATETIME  shift 20
	MAC  shift 28
	INT  shift 37
	UINT  shift 38
	AND  shift 22
	ONESCOMP  shift 18
	LBRACKET  shift 25
	LBRACKET_SQUARE  shift 24
	LPAREN  shift 32
	NULL  shift 23
	KEYWORD  shift 36
	.  error

	field_type  goto 11
	int_type  goto 34
	buf_type  goto 10
	struct_type  goto 14
	array_type  goto 13
	flag_type  goto 33
	call_type  goto 15
	macro_type  goto 31
	type  goto 86
	expr_type  goto 17
	flags  goto 29
	ints  goto 30
	pointer_type  goto 12
	ip_type  goto 16

state 49
	expr_type:  expr_type OR.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 87
	flags  goto 29
	ints  goto 30

state 50
	expr_type:  expr_type AND.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 88
	flags  goto 29
	ints  goto 30

state 51
	expr_type:  expr_type LSHIFT.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 89
	flags  goto 29
	ints  goto 30

state 52
	expr_type:  expr_type RSHIFT.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 90
	flags  goto 29
	ints  goto 30

state 53
	expr_type:  expr_type LOR.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 91
	flags  goto 29
	ints  goto 30

state 54
	expr_type:  expr_type LAND.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error

	int_type  goto 34
	flag_type  goto 33
	macro_type  goto 31
	expr_type  goto 92
	flags  goto 29
	ints  goto 30

state 55
	expr_type:  expr_type LEQUAL.expr_type 

	FLAG  shift 35
	INT  shift 37
	UINT  shift 38
	ONESCOMP  shift 59
	LPAREN  shift 32
	KEYWORD  shift 36
	.  error
